--- a/clickygame/public/index.html
+++ b/clickygame/public/index.html
@@ -23,7 +23,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-image:url('images/bg.jpg');">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
