--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Click Game - Dog Edition</title>
   </head>
   <body style="background-image:url('images/bg.jpg');">
     <noscript>You need to enable JavaScript to run this app.</noscript>
